--- a/debian/changelog
+++ b/debian/changelog
@@ -44,8 +44,10 @@ ikiwiki (1.34) UNRELEASED; urgency=low
     and their IP address, and needs to construct its own commit message
     containing them, or do something more appropriate for the given RCS.
   * Add softwaresite example.
+  * Add a poll plugin.
+  * Add quick mode for archive page generation.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 22 Nov 2006 09:59:12 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 23 Nov 2006 17:13:32 -0500
 
 ikiwiki (1.33) unstable; urgency=low
 
