--- a/debian/changelog
+++ b/debian/changelog
@@ -46,8 +46,9 @@ ikiwiki (1.34) UNRELEASED; urgency=low
   * Add softwaresite example.
   * Add a poll plugin.
   * Add quick mode for archive page generation.
+  * Mercurial backend improvements, including --get-ctime support.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 23 Nov 2006 17:13:32 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 26 Nov 2006 15:01:14 -0500
 
 ikiwiki (1.33) unstable; urgency=low
 
