--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ ikiwiki (1.34) UNRELEASED; urgency=low
   * Make the openid plugin support the callbacks from myopenid.com via its
     affiliate program.
   * Add toggle plugin.
+  * Add a poll plugin.
+  * Add quick mode for archive page generation.
   * Introduce the goodstuff bundle. This is a kind of plugin, that just enables
     many other plugins. It's an easy way to boost ikiwiki from its default,
     basic wiki, to a full-featured wiki, without manually picking the right
@@ -44,9 +46,10 @@ ikiwiki (1.34) UNRELEASED; urgency=low
     and their IP address, and needs to construct its own commit message
     containing them, or do something more appropriate for the given RCS.
   * Add softwaresite example.
-  * Add a poll plugin.
-  * Add quick mode for archive page generation.
-  * Mercurial backend improvements, including --get-ctime support.
+  * Mercurial backend improvements, including --get-ctime support. (Emanuele
+    Aina)
+  * Git backend improvements, including bug fixes and better robustness.
+    (Recai Oktaş)
 
  -- Joey Hess <joeyh@debian.org>  Sun, 26 Nov 2006 15:01:14 -0500
 
