--- a/doc/news/openid.mdwn
+++ b/doc/news/openid.mdwn
@@ -10,6 +10,6 @@ log back in, try out the OpenID signup process if you don't already have an
 OpenID, and see how OpenID works for you. And let me know your feelings about
 making such a switch.
 
-[[poll 0 ""Accept" only "OpenID" for "logins"" 0 ""Accept" only "password" logins" "0" "Accept "both""]]
+[[poll 0 "Accept only OpenID for logins" 0 "Accept only password logins" 0 "Accept both"]]
 
 --[[Joey]]
