--- a/basewiki/openid.mdwn
+++ b/basewiki/openid.mdwn
@@ -8,6 +8,7 @@ To sign up for an OpenID, visit one of the following identity providers:
 
 * [MyOpenID](https://www.myopenid.com/)
 * [GetOpenID](https://getopenid.com/)
+* [Videntity](http://videntity.org/)
 * [LiveJournal](http://www.livejournal.com/openid/)
 * or any of the many others out there..
 
