--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.34.1) unstable; urgency=low
+
+  * Add libtime-duraiton-perl to build deps, as it's used by the svn module
+    which is now tested at build.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 27 Nov 2006 12:26:12 -0500
+
 ikiwiki (1.34) unstable; urgency=low
 
   * Add an openid plugin to support logging in using OpenID.
