--- a/doc/todo/wikiwyg.mdwn
+++ b/doc/todo/wikiwyg.mdwn
@@ -19,4 +19,5 @@ back into the wiki markup, and editing/saving that. That seems to assume
 that there's a way of parsing a page's html and getting back to the underlying
 wiki markup, which is not always the case in ikiwiki. Unless there's some 
 other way to feed it the actual source for a page, this seems like a
-problem.
+problem. According to the developers, it is possible to do that, and start
+off in WikiText mode.
