--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.34.2) UNRELEASED; urgency=low
+
+  * Allow /etc/ikiwiki/wikilist to list just the names of users, if so then 
+    ~user/.ikiwiki/wikilist will be read.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Nov 2006 00:16:40 -0500
+
 ikiwiki (1.34.1) unstable; urgency=low
 
   * Add libtime-duraiton-perl to build deps, as it's used by the svn module
