--- a/doc/ikiwiki-mass-rebuild.mdwn
+++ b/doc/ikiwiki-mass-rebuild.mdwn
@@ -10,9 +10,14 @@ ikiwiki-mass-rebuild
 
 `ikiwiki-mass-rebuild` can be used to force a rebuild of all the wikis
 on a system. You will need to list the wikis it shuld build in the file
-/etc/ikiwiki/wikilist, which has the format:
+`/etc/ikiwiki/wikilist`, which has the format:
 
 user /path/to/wiki
+
+It's also possible to let a user list setup files in `~user/.ikiwiki/wikilist`
+in their home directory. To do so, list only the user's name, without a
+setup file. The format of `~/.ikiwiki/wikilist` is the same as 
+`/etc/ikiwiki/wikilist`.
 
 # OPTIONS
 
