--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
 ikiwiki (1.34.2) UNRELEASED; urgency=low
 
-  * Allow /etc/ikiwiki/wikilist to list just the names of users, if so then 
+  * Allow /etc/ikiwiki/wikilist to list just the names of users, if so then
     ~user/.ikiwiki/wikilist will be read.
+  * Fix url absolution code in inline plugin to support class and id fields in
+    links and imgs, and to support anchor urls.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 28 Nov 2006 00:16:40 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Nov 2006 04:04:39 -0500
 
 ikiwiki (1.34.1) unstable; urgency=low
 
