--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,17 @@
-ikiwiki (1.34.2) UNRELEASED; urgency=low
+ikiwiki (1.34.2) unstable; urgency=low
 
   * Allow /etc/ikiwiki/wikilist to list just the names of users, if so then
     ~user/.ikiwiki/wikilist will be read.
   * Fix url absolution code in inline plugin to support class and id fields in
     links and imgs, and to support anchor urls.
+  * More build deps updates.
+  * /dev/null fortune failures
 
- -- Joey Hess <joeyh@debian.org>  Tue, 28 Nov 2006 04:04:39 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Nov 2006 12:58:47 -0500
 
 ikiwiki (1.34.1) unstable; urgency=low
 
-  * Add libtime-duraiton-perl to build deps, as it's used by the svn module
+  * Add libtime-duration-perl to build deps, as it's used by the svn module
     which is now tested at build.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 27 Nov 2006 12:26:12 -0500
