--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.34.3) UNRELEASED; urgency=low
+
+  * Fix daemonisation code to only do daemon setup things after forking the
+    child process.
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  1 Dec 2006 19:11:32 -0500
+
 ikiwiki (1.34.2) unstable; urgency=low
 
   * Allow /etc/ikiwiki/wikilist to list just the names of users, if so then
