--- a/doc/bugs/formbuilder_3.0401_broken.mdwn
+++ b/doc/bugs/formbuilder_3.0401_broken.mdwn
@@ -67,3 +67,7 @@ Nasty, but it should work. I haven't fully installed the new version of
 CGI::FormBuilder to test it, and it's quite possible that other changes
 in the new version cause other breakage. If you want to test the fix,
 it's in svn now. --[[Joey]]
+
+Now that the new version of formbuilder is in debian unstable, I'm using
+ikiwiki with it, and, after fixing a bug or two more, I think it's all
+working, so I'll call this bug [[bugs/done]]. --[[Joey]]
