--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -8,8 +8,7 @@ Ikiwiki is a perl program, and needs a recent version of perl such as
 Ikiwiki requires the [[cpan Text::MarkDown]], [[cpan URI]] and
 [[cpan HTML::Parser]] perl modules be installed, and also uses the
 following perl modules if available: 
-[[cpan CGI::Session]], [[cpan CGI::FormBuilder]] (version 3.02.02 or newer,
-but 3.0401 might be broken),
+[[cpan CGI::Session]], [[cpan CGI::FormBuilder]] (version 3.02.02 or newer),
 [[cpan HTML::Template]], [[cpan Mail::Sendmail]], [[cpan Time::Duration]]
 [[cpan TimeDate]], [[cpan HTML::Scrubber]], [[cpan RPC::XML]],
 [[cpan XML::Simple]], [[cpan XML::Feed]], [[cpan File::MimeInfo]].
