--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.34.3) UNRELEASED; urgency=low
+ikiwiki (1.35) unstable; urgency=low
 
   * Fix daemonisation code to only do daemon setup things after forking the
     child process.
