web commit by http://joeyh.myopenid.com/: foo

--- a/doc/news/version_1.35.mdwn
+++ b/doc/news/version_1.35.mdwn
@@ -6,3 +6,5 @@ ikiwiki 1.35 released with [[toggle text="these changes"]]
      template won't work with CGI::FormBuilder 3.0401, so disable it for now.
    * CGI::FormBuilder 3.0401 seems to work ok now with ikiwiki, although
      there might still be bugs lurking.."""]]
+
+BTW, these CGI::FormBuilder issues are why editing pages has been broken on this wiki for the past couple days. --[[Joey]]
