web commit by JoshTriplett: Add link to Debian bugs.

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,4 +1,6 @@
 Welcome to ikiwiki's todo list. Link items to [[todo/done]] when done.
 
+Also see the [Debian bugs](http://bugs.debian.org/ikiwiki).
+
 [[inline pages="todo/* and !todo/done and !link(todo/done) and !*/Discussion"
 actions=yes rootpage="todo" show=0]]
