web commit by JoshTriplett: Add link to Debian bugs.

--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -1,4 +1,6 @@
 This is ikiwiki's bug list. Link bugs to [[bugs/done]] when done.
 
+Also see the [Debian bugs](http://bugs.debian.org/ikiwiki).
+
 [[inline pages="bugs/* and !bugs/done and !link(bugs/done) and !*/Discussion"
 actions=yes rootpage="bugs" show=0]]
