web commit by JoshTriplett: Fix typo.

--- a/doc/ikiwiki-mass-rebuild.mdwn
+++ b/doc/ikiwiki-mass-rebuild.mdwn
@@ -9,7 +9,7 @@ ikiwiki-mass-rebuild
 # DESCRIPTION
 
 `ikiwiki-mass-rebuild` can be used to force a rebuild of all the wikis
-on a system. You will need to list the wikis it shuld build in the file
+on a system. You will need to list the wikis it should build in the file
 `/etc/ikiwiki/wikilist`, which has the format:
 
 user /path/to/wiki
