web commit by hb: adding ubuntu reference

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -21,6 +21,12 @@ to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`, and libcgi-
 There is also an unofficial backport of ikiwiki for Debian stable, provided by
 Pawel Tecza, at <http://gpa.net.icm.edu.pl/debian/>.
 
+# Ubuntu
+
+ikiwiki is also available in Ubunut / Edgy
+
+        apt-get install ikiwiki
+
 # subversion
 
 The current development version of ikiwiki can be accessed using subversion at 
