web commit by hb: *sigh*

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -23,7 +23,7 @@ Pawel Tecza, at <http://gpa.net.icm.edu.pl/debian/>.
 
 # Ubuntu
 
-ikiwiki is also available in Ubunut / Edgy
+ikiwiki is also available in Ubuntu / Edgy
 
         apt-get install ikiwiki
 
