* Fix various links on the hyperestradier pages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.36) UNRELEASED; urgency=low
+
+  * Fix various links on the hyperestradier pages.
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  4 Dec 2006 11:50:27 +0100
+
 ikiwiki (1.35) unstable; urgency=low
 
   * Fix daemonisation code to only do daemon setup things after forking the
