web commit by http://shack_a_nerd.livejournal.com/: testing OpenID

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -76,4 +76,5 @@ This sandbox is also a [[blog]]!
 ----
 [[newpage]]
 ---
-random
+random, n.: unpredictable based on previous information. Computers tend to make do with nonrandom 
+or pseudorandom computations. See also: arbitrary, deterministic.
