web commit by JoshTriplett: Fix link.

--- a/doc/todo/default_content_for_new_post.mdwn
+++ b/doc/todo/default_content_for_new_post.mdwn
@@ -1,1 +1,1 @@
-Along the same lines as having a [[default name for new post]]s, an option to include default content in a new [[plugins/inline]] post would help with tasks like using an inline for a comment form on each new blog post.
+Along the same lines as having a [[default_name_for_new_post]]s, an option to include default content in a new [[plugins/inline]] post would help with tasks like using an inline for a comment form on each new blog post.
