web commit by http://shack_a_nerd.livejournal.com/

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -27,6 +27,11 @@ something, that I think is very valuable.
 > overwhelming desire to work on myself right now. Patches appreciated and
 > I'll be happy to point you in the right directions.. --[[Joey]]
 
+>> I'm really curious how you'd suggest implementing ACLs on reading a page.
+>> It seems to me the only way you could do it is .htaccess DenyAll or something,
+>> and then route all page views through ikiwiki.cgi. Am I missing something?
+>> --[[Ethan]]
+
 ----
 
 Some questions about the RecentChanges function. -- Ethan
