web commit by http://choffee.co.uk/: Added my new site choffee.

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -32,6 +32,7 @@ Sites that are using ikiwiki include:
 * [Christian Mock's homepage](http://www.tahina.priv.at/).
 * [Simon Raven's IkiWiki homepage](http://simonraven.nuit.ca/wiki/).
 * The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
+* [Choffee](http://choffee.co.uk/).
 
 Please feel free to add your own ikiwiki site!
 
