responses and more thoughts on the issue of discussion pages as blogs

--- a/doc/todo/allow_full_post_from_the___34__add_a_new_post__34___form.mdwn
+++ b/doc/todo/allow_full_post_from_the___34__add_a_new_post__34___form.mdwn
@@ -1,1 +1,10 @@
-To avoid the two-step posting process of typing a page name, hitting "Edit", entering content, and hitting "Save Page", how about optionally including a post content field, save button, and preview button directly on the page with the inline?  This would particularly help when using an inline directive for a comment form at the bottom of a blog post; with these added fields, the post form becomes exactly like the typical blog comment form.
+To avoid the two-step posting process of typing a page name, hitting
+"Edit", entering content, and hitting "Save Page", how about optionally
+including a post content field, save button, and preview button directly on
+the page with the inline?  This would particularly help when using an
+inline directive for a comment form at the bottom of a blog post; with
+these added fields, the post form becomes exactly like the typical blog
+comment form.
+
+> I agree that having this as an option is reasonable. Although it would
+> take a fair amount of work. --[[Joey]]
