--- a/doc/todo/default_content_for_new_post.mdwn
+++ b/doc/todo/default_content_for_new_post.mdwn
@@ -1,1 +1,8 @@
-Along the same lines as having a [[default_name_for_new_post]]s, an option to include default content in a new [[plugins/inline]] post would help with tasks like using an inline for a comment form on each new blog post.
+Along the same lines as having a [[default_name_for_new_post]]s, an option
+to include default content in a new [[plugins/inline]] post would help with
+tasks like using an inline for a comment form on each new blog post.
+
+> No, it would only help if the new blog post were being made via the form.
+> If you're editing it in vi, and committing, it doesn't help. :-) This is
+> another reason why I prefer the approach in [[discussion_page_as_blog]]
+> --[[Joey]]
