--- a/doc/todo/filtering_content_when_inlining.mdwn
+++ b/doc/todo/filtering_content_when_inlining.mdwn
@@ -1,1 +1,16 @@
-It would help to allow filtering of content when [[inlining|plugins/inline]] pages.  For example, given some way to filter out the display of inlines within other inlines, a blog post could allow easy inline commenting by putting an inline directive with post form at the bottom of the post.
+It would help to allow filtering of content when
+[[inlining|plugins/inline]] pages.  For example, given some way to filter
+out the display of inlines within other inlines, a blog post could allow
+easy inline commenting by putting an inline directive with post form at the
+bottom of the post.
+
+> That's trying to do the same thing as the todo item
+> [[discussion_page_as_blog]]. Difference is that you're suggesting
+> displaying the comments in the blog post that they comment on, instead
+> of on the separate disucssion page. Which leads to the problem of those
+> comments showing up inlined into the blog.
+> 
+> I know there are benefits to having the comments on the same page and not
+> a separate discussion page, but it does add compliciations and ikiwiki
+> already has discussion pages, so I'm more likely to go the route
+> described in [[discussion_page_as_blog]]. --[[Joey]]
