web commit by http://ethan.betacantrips.com/: not happy with these possibilities -- read ACLs not likely, hmm?

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -37,6 +37,9 @@ something, that I think is very valuable.
 >>> unless perhaps you decided to use http basic authentication and the
 >>> httpauth plugin for ikiwiki that integrates with that.. [[--Joey]]
 
+>>>> Which would rule out openid, or other fun forms of auth. And routing all access 
+>>>> through the CGI sort of defeats the purpose of ikiwiki. --[[Ethan]]
+
 ----
 
 Some questions about the RecentChanges function. -- Ethan
