web commit by JoshTriplett: Fix links.

--- a/doc/bugs/wiki_links_still_processed_inside_code_blocks.mdwn
+++ b/doc/bugs/wiki_links_still_processed_inside_code_blocks.mdwn
@@ -1,1 +1,1 @@
-In [[markdown]] syntax, none of the other special characters get processed inside a code block.  However, in ikiwiki, [[wiki links|wikilinks]] and [[preprocessor directives|preprocessordirectives]] still get processed inside a code block, requiring additional escaping.  For example, `[links don't work](#here)`, but `a [[wikilink]] becomes HTML`.
+In [[markdown]] syntax, none of the other special characters get processed inside a code block.  However, in ikiwiki, [[wiki links|wikilink]] and [[preprocessor directives|preprocessordirective]] still get processed inside a code block, requiring additional escaping.  For example, `[links don't work](#here)`, but `a [[wikilink]] becomes HTML`.
