web commit by ManojSrivastava

--- a/doc/patchqueue/calendar_--_archive_browsing_via_a_calendar_frontend.mdwn
+++ b/doc/patchqueue/calendar_--_archive_browsing_via_a_calendar_frontend.mdwn
@@ -15,3 +15,8 @@ The year and month entities in the out put have links to archive index pages, wh
 
           \[[meta title="Archives for 2006/01"]]
           \[[inline rootpage="blog" atom="no" rss="no" show="0" pages="blog/* and !*/Discussion and creation_year(2006) and creation_month(01)" ]]
+
+I'll send in the patch via email.
+
+
+ManojSrivastava
