web commit by ManojSrivastava

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -33,6 +33,7 @@ Sites that are using ikiwiki include:
 * [Simon Raven's IkiWiki homepage](http://simonraven.nuit.ca/wiki/).
 * The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
 * [Choffee](http://choffee.co.uk/).
+* [Tales from the Gryphon](http://www.golden-gryphon.com/blog/manoj/), Manoj Srivastava's free software blog.
 
 Please feel free to add your own ikiwiki site!
 
