--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -16,7 +16,8 @@ Or download the deb from <http://packages.debian.org/unstable/web/ikiwiki>.
 
 While this deb has been developed on Debian unstable, it should also work
 on stable, although to get the CGI stuff working on stable, you will need
-to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`, and libcgi-session-perl `4.14-1`
+to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`,
+and libcgi-session-perl `4.14-1`
 
 There is also an unofficial backport of ikiwiki for Debian stable, provided by
 Pawel Tecza, at <http://gpa.net.icm.edu.pl/debian/>.
