* Use POST for poll to avoid some robots.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ikiwiki (1.36) UNRELEASED; urgency=low
 
   * Fix various links on the hyperestradier pages.
+  * Use POST for poll to avoid some robots.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  4 Dec 2006 11:50:27 +0100
+ -- Joey Hess <joeyh@debian.org>  Thu, 14 Dec 2006 14:04:25 -0500
 
 ikiwiki (1.35) unstable; urgency=low
 
