--- a/doc/bugs/poll_plugin_uses_GET.mdwn
+++ b/doc/bugs/poll_plugin_uses_GET.mdwn
@@ -1,1 +1,4 @@
-The [[plugins/poll]] plugin uses GET for the vote links.  As a result, the [[news/openid]] poll has a number of votes from Google. :)
+The [[plugins/poll]] plugin uses GET for the vote links.  As a result, the
+[[news/openid]] poll has a number of votes from Google. :)
+
+[[bugs/done]] -- [[Joey]]
