--- a/doc/news/openid.mdwn
+++ b/doc/news/openid.mdwn
@@ -8,8 +8,6 @@ That would mean blowing away all the currently registered users and
 their preferences. If you're active on this wiki, I suggest you log out and
 log back in, try out the OpenID signup process if you don't already have an
 OpenID, and see how OpenID works for you. And let me know your feelings about
-making such a switch.
+making such a switch. --[[Joey]]
 
 [[poll 9 "Accept only OpenID for logins" 5 "Accept only password logins" 5 "Accept both"]]
-
---[[Joey]]
