--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ ikiwiki (1.36) UNRELEASED; urgency=low
 
   * Fix various links on the hyperestradier pages.
   * Use POST for poll to avoid some robots.
+  * Fix sometimes broken links to Discussion pages from blog pages.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 14 Dec 2006 14:04:25 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 14 Dec 2006 14:41:01 -0500
 
 ikiwiki (1.35) unstable; urgency=low
 
