--- a/doc/bugs/poll_plugin_uses_GET.mdwn
+++ b/doc/bugs/poll_plugin_uses_GET.mdwn
@@ -4,3 +4,5 @@ The [[plugins/poll]] plugin uses GET for the vote links.  As a result, the
 done -- [[Joey]]
 
 Not quite; [the `<form>` `method` attribute defaults to GET](http://www.w3.org/TR/html401/interact/forms.html#adef-method).  The forms each need the attribute `method="POST"`.
+
+[[bugs/done]] -- [[Joey]]
