web commit by http://chrisisbd.myopenid.com/

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -6,6 +6,20 @@ Note that for more formal bug reports or todo items, you can also edit the
 [[bugs]] and [[todo]] pages.
 
 ----
+# Excellent - how do I translate a TWiki site?
+
+I just diskovered ikiwiki quite by chance, I was looking for a console/terminal
+menu system and found pdmenu.  So pdmenu brought me to here and I've found ikiwik!
+It looks as if it's just what I've been wanting for a long time.  I wanted something
+to create mostly text web pages which, as far as possible, have source which is human 
+readable or at least in a standard format.  ikiwiki does this twice over by using 
+markdown for the source and producing static HTML from it.
+
+I'm currently using TWiki and have a fair number of pages in that format, does
+anyone have any bright ideas for translating?  I can knock up awk scripts fairly
+easily, perl is possible (but I'm not strong in perl).
+
+----
 
 # OpenID
 
