--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -8,8 +8,8 @@ Note that for more formal bug reports or todo items, you can also edit the
 ----
 # Excellent - how do I translate a TWiki site?
 
-I just diskovered ikiwiki quite by chance, I was looking for a console/terminal
-menu system and found pdmenu.  So pdmenu brought me to here and I've found ikiwik!
+I just discovered ikiwiki quite by chance, I was looking for a console/terminal
+menu system and found pdmenu.  So pdmenu brought me to here and I've found ikiwiki!
 It looks as if it's just what I've been wanting for a long time.  I wanted something
 to create mostly text web pages which, as far as possible, have source which is human 
 readable or at least in a standard format.  ikiwiki does this twice over by using 
