web commit by http://chrisisbd.myopenid.com/

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -8,7 +8,7 @@ Note that for more formal bug reports or todo items, you can also edit the
 # Installation/Setup questions
 
 I have just installed ikiwiki and it works - at least I have the example index.mdwn page
-complied and visible.  However I have a few issues/problems:-
+compiled and visible.  However I have a few issues/problems:-
 
 * A couple of the 'optional' Perl modules aren't optional, you can't install ikiwiki without them,
 these are HTML::Template and HTML::Scrubber (at least I think it was these two, it's a bit messy 
