--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -228,6 +228,12 @@ configuration options of their own.
   Enables or disables "Discussion" links from being added to the header of
   every page. The links are enabled by default.
 
+* --userdir subdir
+
+  Optionally, allows links to users of the wiki to link to pages inside a
+  subdirectory of the wiki. The default is to link to pages in the toplevel
+  directory of the wiki.
+
 * --timeformat format
 
   Specify how to display the time or date. The format string is passed to the
