fix man page perms in install

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ ikiwiki (1.36) UNRELEASED; urgency=low
   * Use POST for poll to avoid some robots.
   * Fix sometimes broken links to Discussion pages from blog pages.
   * Add userdir config setting.
+  * Fix man page perms in install.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 19 Dec 2006 11:58:44 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 19 Dec 2006 12:08:40 -0500
 
 ikiwiki (1.35) unstable; urgency=low
 
