--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -5,13 +5,13 @@ most unix-like systems.
 Ikiwiki is a perl program, and needs a recent version of perl such as
 5.8.8. (5.8.0 has been reported not to work).
 
-Ikiwiki requires the [[cpan Text::Markdown]], [[cpan URI]] and
-[[cpan HTML::Parser]] perl modules be installed, and also uses the
-following perl modules if available: 
+Ikiwiki requires the [[cpan Text::Markdown]], [[cpan URI]],
+[[cpan HTML::Parser]], and [[cpan HTML::Template]] perl modules be
+installed, and also uses the following perl modules if available: 
 [[cpan CGI::Session]], [[cpan CGI::FormBuilder]] (version 3.02.02 or newer),
-[[cpan HTML::Template]], [[cpan Mail::Sendmail]], [[cpan Time::Duration]]
-[[cpan TimeDate]], [[cpan HTML::Scrubber]], [[cpan RPC::XML]],
-[[cpan XML::Simple]], [[cpan XML::Feed]], [[cpan File::MimeInfo]].
+[[cpan Mail::Sendmail]], [[cpan Time::Duration]], [[cpan TimeDate]],
+[[cpan HTML::Scrubber]], [[cpan RPC::XML]], [[cpan XML::Simple]],
+[[cpan XML::Feed]], [[cpan File::MimeInfo]].
 
 The [[tla]] support also needs the [[cpan MailTools]] perl module.
 
