web commit by http://chrisisbd.myopenid.com/

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -41,6 +41,9 @@ the files and then it *did* compile but 'touch'ing the files after a few minutes
 > would not see recently changed files; you could try stracing it.
 > --[[Joey]]
 
+> OK, thanks, I don't quite know what was happening before but it seems to be working right now.
+> --[[Chris]]
+
 * I wish there was a mailing list, much easier for this sort of stuff than this, apart from
 anything else I get to use a decent editor.
 
