web commit by http://chrisisbd.myopenid.com/

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -26,7 +26,7 @@ to go back and find out).
 
 > Found it, in /usr/local/share/man, since no other man pages are in either /usr/share/man or in /usr/local/share/man the ikiwiki
 > man page is a bit lonely, and more to the point not on my MANPATH.  Still I have found it now, I'll just move it to somewhere
-> more sensible.
+> more sensible. [[Chris]]
 
 * Running "ikiwiki --setup ikiwiki.setup" doesn't do anything.  I have edited ikiwiki.setup to
 my local settings.  There are no errors but neither does anything get compiled.  An ikiwiki
