web commit by http://ethan.betacantrips.com/

--- a/doc/sandbox/dood_can_I_attach_a_file__63__/discussion.mdwn
+++ b/doc/sandbox/dood_can_I_attach_a_file__63__/discussion.mdwn
@@ -6,3 +6,5 @@ OpenOffice or PDF documents) to my ikiwiki without using `svn add filename`
 command?
 
 Does someone know how to do it?
+
+> As far as I know, ikiwiki doesn't have any such functionality yet. -- Ethan
