--- a/doc/sandbox/dood_can_I_attach_a_file__63__/discussion.mdwn
+++ b/doc/sandbox/dood_can_I_attach_a_file__63__/discussion.mdwn
@@ -5,6 +5,9 @@ I'm also curious how I can upload read-only files (for example images,
 OpenOffice or PDF documents) to my ikiwiki without using `svn add filename`
 command?
 
-Does someone know how to do it?
+Does someone know how to do it? -- Pawel
 
 > As far as I know, ikiwiki doesn't have any such functionality yet. -- Ethan
+
+>> Thanks for the feedback, Ethan! So I will be waiting for that useful
+>> feature :) -- Pawel
