web commit by JeremyReed: 5 questions

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -136,3 +136,35 @@ with all news or the one with the latest news only, I don't know yet.)
 >> That wouldn't use the same style for the RSS and Atom links, and it
 >> wouldn't embed the feed link into `<head>` so that browsers can automatically
 >> find it.
+
+----
+
+# asciidoc or txt2tags ?
+
+Any plugins or support for using asciidoc or txt2tags as the wiki language and/or exporting to asciidoc or txt2tags?
+
+----
+
+# LaTeX support?
+
+Any plugins or support for exporting to LaTeX?
+(If not could use asciidoc or txt2tags mentioned above to generated LaTeX.)
+
+----
+
+# Using with RCS?
+
+Any examples of using co(1), ci(1) and other RCS related tools with ikiwiki?
+
+----
+
+# Using with CVS?
+
+Any examples of using ikiwiki with cvs?
+
+----
+
+# Show differences before saving page?
+
+It would be nice to be able to have a button to show "Differences" (or "Show Diff") when
+editing a page. Is that an option that can be enabled?
