--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -13,7 +13,9 @@ Suggestions of ideas for plugins:
   to inline the cgi, although firefox seems to render that nastily with
   nested scroll bars. :-(
 
-* 
+* It would be nice to be able to have a button to show "Differences" (or 
+  "Show Diff") when editing a page. Is that an option that can be enabled?
+  Using a plugin?
 
 * For PlaceWiki I want to be able to do some custom plugins, including one
   that links together subpages about the same place created by different
