* Fix an issue with inlining a page with a rss feed inside another   page with an rss feed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ ikiwiki (1.36) UNRELEASED; urgency=low
   * Fix sometimes broken links to Discussion pages from blog pages.
   * Add userdir config setting.
   * Fix man page perms in install.
+  * Fix an issue with inlining a page with a rss feed inside another
+    page with an rss feed.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 19 Dec 2006 12:08:40 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Dec 2006 08:50:41 -0500
 
 ikiwiki (1.35) unstable; urgency=low
 
